--- a/index.html
+++ b/index.html
@@ -5,9 +5,113 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animais Fantásticos</title>
+
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+  <header>
+    <nav class="menu">
+      <ul>
+        <li><a href="#animais">Animais</a></li>
+        <li><a href="#faq">Faq</a></li>
+        <li><a href="#contato">Contato</a></li>
+        <li><a href="#dev">Dev →</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="animais" class="animais">
+    <h1>Animais Fantásticos</h1>
+    <ul class="animais-lista">
+      <li><img src="./img/imagem1.jpg" alt="raposa"></li>
+      <li><img src="./img/imagem2.jpg" alt="esquilo"></li>
+      <li><img src="./img/imagem3.jpg" alt="urso"></li>
+      <li><img src="./img/imagem4.jpg" alt="lobo"></li>
+      <li><img src="./img/imagem5.jpg" alt="macaco"></li>
+      <li><img src="./img/imagem6.jpg" alt="leão"></li>
+    </ul>
+
+    <div class="animais-descricao">
+      <section>
+        <h2>Raposa</h2>
+        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+        <p> Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        <p> De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+      </section>
+
+      <section>
+        <h2>Esquilo</h2>
+        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+        <p> Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        <p> De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+      </section>
+
+      <section>
+        <h2>Urso</h2>
+        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+        <p> Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        <p> De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+      </section>
+
+      <section>
+        <h2>Lobo</h2>
+        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+        <p> Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        <p> De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+      </section>
+
+      <section>
+        <h2>Macaco</h2>
+        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+        <p> Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        <p> De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+      </section>
+
+      <section>
+        <h2>Leão</h2>
+        <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+        <p> Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+        <p> De cerca de 40 espécies reconhecidas como raposas, somente 12 pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa vermelha é a mais comum.</p>
+        <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+      </section>
+    </div>
+  </section>
+
+  <section id="faq" class="faq">
+    <h1>FAQ</h1>
+    <dl>
+      <dd>Qual a idade dos animais?</dd>
+      <dt>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dt>
+      <dd>Eles são fantásticos?</dd>
+      <dt>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dt>
+      <dd>Qual a diferença?</dd>
+      <dt>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dt>
+      <dd>Como proteger?</dd>
+      <dt>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dt>
+    </dl>
+  </section>
+
+  <section id="contato" class="contato">
+    <h1>Contato</h1>
+    <div class="mapa" <img src="./img/mapa.png" alt="mapa">
+    </div>
+    <ul class="dados">
+      <li>contato@origamid.com</li>
+      <li>+55 (21) 9999-9999</li>
+      <li>Rua do Conde, nº 21</li>
+      <li>Rio de Janeiro - RJ</li>
+    </ul>
+  </section>
+
+  <footer class="footer">
+    <p>Todos os direitos reservados.</p>
+  </footer>
 
 </body>
 
