--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <section id="animais" class="grid-section animais">
     <h1 class="titulo">Animais Fantásticos</h1>
-    <ul class="animais-lista">
+    <ul class="animais-lista js-tabmenu">
       <li><img src="./img/imagem1.jpg" alt="raposa"></li>
       <li><img src="./img/imagem2.jpg" alt="esquilo"></li>
       <li><img src="./img/imagem3.jpg" alt="urso"></li>
@@ -32,7 +32,7 @@
       <li><img src="./img/imagem6.jpg" alt="leão"></li>
     </ul>
 
-    <div class="animais-descricao">
+    <div class="animais-descricao js-tabcontent">
       <section>
         <h2>Raposa</h2>
         <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
