--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <section id="contato" class="grid-section contato" data-anime="scroll">
       <h1 class="titulo">Contato</h1>
-      <div class="mapa">
+      <div class="mapa" data-tooltip aria-label="Endereço próximo ao estacionamento.">
         <img src="./img/mapa.png" alt="mapa">
       </div>
       <ul class="dados">
